--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
       <app-category-list></app-category-list>
     </div>
     <div class="col-9">
-      <app-product-list></app-product-list>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
