filter and router

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <div class="container">
+<nav class="navbar navbar-expand-sm navbar-dark" style="background-color:darkblue">
+    <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -23,9 +23,9 @@
       </ul>
       <form class="d-flex my-2 my-lg-0">
         <input class="form-control me-sm-2" type="text" placeholder="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <button class="btn btn-outline-success my-2 my-sm-0" style="background-color: aliceblue;" type="submit">Search</button>
       </form>
-      <span class="navbar-text">
+      <span class="navbar-text ms-2">
         <a routerLink="/my-cart">Sepetim</a>
       </span>
     </div>
