--- a/src/app/modules/cart/my-cart/my-cart.component.html
+++ b/src/app/modules/cart/my-cart/my-cart.component.html
@@ -1,3 +1,4 @@
+<h4 class="border-bottom pb-2">Sepetim</h4>
 <div class="table-responsive">
     <table class="table table-primary">
         <thead>
