--- a/src/app/modules/category/category-list/category-list.component.html
+++ b/src/app/modules/category/category-list/category-list.component.html
@@ -5,6 +5,8 @@
         class="list-group-item list-group-item-action ">{{category.name}}</a>
       </div> -->
       <div class="list-group">
-        <a *ngFor="let category of categories" [routerLink]="['products', category.id]"
+        <a *ngFor="let category of categories" 
+        [routerLink]="['products', category.id]"
+        routerLinkActive="active"
         class="list-group-item list-group-item-action ">{{category.name}}</a>
       </div>
