--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -13,12 +13,8 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/products">Ürünlerimiz</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-          <div class="dropdown-menu" aria-labelledby="dropdownId">
-            <a class="dropdown-item" href="#">Action 1</a>
-            <a class="dropdown-item" href="#">Action 2</a>
-          </div>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/admin">Admin Page</a>
         </li>
       </ul>
       <form class="d-flex my-2 my-lg-0">
