--- a/src/app/modules/account/login/login.component.html
+++ b/src/app/modules/account/login/login.component.html
@@ -1,16 +1,16 @@
 <div class="container w-50" >
     <div class="row">
         <div class="col text-center mt-5">
-            <form>
+            <form [formGroup]="loginForm" (submit)="login()">
                 <img class="mb-4" src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
                 <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
             
                 <div class="form-floating">
-                  <input type="text" class="form-control" id="floatingInput" placeholder="Kullanıcı adı giriniz">
+                  <input type="text" formControlName="username" class="form-control" id="floatingInput" placeholder="Kullanıcı adı giriniz">
                   <label for="floatingInput">Kullanıcı Adı</label>
                 </div>
                 <div class="form-floating">
-                  <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                  <input type="password" formControlName="password" class="form-control" id="floatingPassword" placeholder="Password">
                   <label for="floatingPassword">Şifre</label>
                 </div>
             
@@ -20,7 +20,7 @@
                     Remember me
                   </label>
                 </div>
-                <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+                <button [disabled]="loginForm.invalid" class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
                 <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2023</p>
               </form>
         </div>
