--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,5 +1,6 @@
-<app-menu></app-menu>
-
+<app-menu title="TNB MARKET" (search)="menuSearch($event)"></app-menu>
+<!-- <app-menu [title]='"TNB MARKET"'></app-menu>
+ -->
 <div class="container-fluid mt-4">
   <div class="row">
     <div class="col-3">
