--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar-dark" style="background-color:darkblue">
     <div class="container-fluid">
-    <a class="navbar-brand" href="#">TNB</a>
+    <a class="navbar-brand" href="#">{{title}}</a>
     <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -23,12 +23,12 @@
           <a class="nav-link" routerLink="/account/login">Login</a>
         </li> -->
       </ul>
-      <form class="d-flex my-2 my-lg-0">
-        <input class="form-control me-sm-2" type="text" placeholder="Search">
+      <form class="d-flex my-2 my-lg-0" (submit)="searchInPage()">
+        <input [(ngModel)]="txtSearch" name="q"  [ngModelOptions]="{standalone:true}" class="form-control me-sm-2" type="text" placeholder="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" style="background-color: aliceblue;" type="submit">Search</button>
       </form>
       <span class="navbar-text ms-2">
-        <a routerLink="/my-cart">Sepetim</a>
+        <a routerLink="/my-cart"><b> Toplam: {{totalPrice | currency }}</b> Sepetim</a>
         <button *ngIf="user" type="button" (click)="logout()" class="btn btn-sm btn-warning ms-2">Çıkış</button>
       </span>
     </div>
