--- a/src/app/modules/admin/product-save/product-save.component.html
+++ b/src/app/modules/admin/product-save/product-save.component.html
@@ -6,14 +6,14 @@
         <form #frm="ngForm" ngForm (submit)="save()">
             <div class="mb-3">
               <label class="form-label">Ürün Adı</label>
-              <input [(ngModel)]="model.name"  #name="ngModel" required name="name" type="text" class="form-control">
+              <input [(ngModel)]="model.productName"  #name="ngModel" required name="name" type="text" class="form-control">
               <div *ngIf="name.invalid  && name.dirty" class="form-text text-danger">Ürün adı zorunludur!</div>
             </div>
              <div class="mb-3">
               <label class="form-label">Kategori</label>
               <!-- <input ngModel #categoryId="ngModel" required name="categoryId" type="text" class="form-control"> -->
               <select [(ngModel)]="model.categoryId" #categoryId="ngModel" required name="categoryId" class="form-select">
-                <option *ngFor="let category of categories" [value]="category.id"> {{category.name}} </option>
+                <option *ngFor="let category of categories" [value]="category.categoryId"> {{category.categoryName}} </option>
               </select>
               <div *ngIf="categoryId.invalid  && categoryId.dirty" class="form-text text-danger">Kategori zorunludur!</div>
             </div>
